<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012-2017 Tobias Brunner
    Copyright (C) 2012 Giuliano Grassi
    Copyright (C) 2012 Ralf Sager
    HSR Hochschule fuer Technik Rapperswil

    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2 of the License, or (at your
    option) any later version.  See <http://www.fsf.org/copyleft/gpl.txt>.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:animateLayoutChanges="true" >

        <org.strongswan.android.ui.widget.TextInputLayoutHelper
            android:id="@+id/gateway_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:helper_text="@string/profile_gateway_hint" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/gateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                android:hint="@string/profile_gateway_label" />

        </org.strongswan.android.ui.widget.TextInputLayoutHelper>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="12sp"
            android:text="@string/profile_vpn_type_label" />

        <Spinner
            android:id="@+id/vpn_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/vpn_types" />

        <include
            android:id="@+id/tnc_notice"
            layout="@layout/two_line_button"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/username_password_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/username_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/profile_username_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/password_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:helper_text="@string/profile_password_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword|textNoSuggestions"
                    android:hint="@string/profile_password_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_certificate_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:text="@string/profile_user_certificate_label" />

            <include
                android:id="@+id/select_user_certificate"
                layout="@layout/two_line_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:text="@string/profile_user_select_id_label" />

            <Spinner
                android:id="@+id/select_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="12sp"
            android:text="@string/profile_ca_label" />

        <CheckBox
            android:id="@+id/ca_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/profile_ca_auto_label" />

        <include
            android:id="@+id/select_certificate"
            layout="@layout/two_line_button" />

        <org.strongswan.android.ui.widget.TextInputLayoutHelper
            android:id="@+id/name_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:helper_text="@string/profile_name_hint" >

            <MultiAutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                android:completionThreshold="1"
                android:hint="@string/profile_name_label" />

        </org.strongswan.android.ui.widget.TextInputLayoutHelper>

        <CheckBox
            android:id="@+id/show_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_show_advanced_label" />

        <LinearLayout
            android:id="@+id/advanced_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:textSize="20sp"
                android:text="@string/profile_advanced_label" />

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/remote_id_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helper_text="@string/profile_remote_id_hint" >

                <MultiAutoCompleteTextView
                    android:id="@+id/remote_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:completionThreshold="1"
                    android:hint="@string/profile_remote_id_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/mtu_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helper_text="@string/profile_mtu_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mtu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number|textNoSuggestions"
                    android:hint="@string/profile_mtu_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/port_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helper_text="@string/profile_port_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number|textNoSuggestions"
                    android:hint="@string/profile_port_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/nat_keepalive_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helper_text="@string/profile_nat_keepalive_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nat_keepalive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number|textNoSuggestions"
                    android:hint="@string/profile_nat_keepalive_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <Switch
                android:id="@+id/cert_req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/profile_cert_req_label" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:text="@string/profile_cert_req_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:text="@string/profile_split_tunneling_label" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:text="@string/profile_split_tunneling_intro" />

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/included_subnets_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helper_text="@string/profile_included_subnets_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/included_subnets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/profile_included_subnets_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <org.strongswan.android.ui.widget.TextInputLayoutHelper
                android:id="@+id/excluded_subnets_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helper_text="@string/profile_excluded_subnets_hint" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/excluded_subnets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/profile_excluded_subnets_label" />

            </org.strongswan.android.ui.widget.TextInputLayoutHelper>

            <CheckBox
                android:id="@+id/split_tunneling_v4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_split_tunnelingv4_title" />

            <CheckBox
                android:id="@+id/split_tunneling_v6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_split_tunnelingv6_title" />

            <TextView
                android:id="@+id/apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:text="@string/profile_select_apps_label" />

            <Spinner
                android:id="@+id/apps_handling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/apps_handling" />

            <include
                android:id="@+id/select_applications"
                layout="@layout/two_line_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
