<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012-2016 Tobias Brunner
    Copyright (C) 2012 Giuliano Grassi
    Copyright (C) 2012 Ralf Sager
    Hochschule fuer Technik Rapperswil

    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2 of the License, or (at your
    option) any later version.  See <http://www.fsf.org/copyleft/gpl.txt>.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:background="@drawable/state_background"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="top"
            android:text="@string/state_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vpn_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/state_disabled"
            android:textColor="?android:textColorSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vpn_profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="top"
            android:text="@string/profile_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:visibility="gone" >
        </TextView>

        <TextView
            android:id="@+id/vpn_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textSize="20sp"
            android:visibility="gone" >
        </TextView>
    </GridLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <Button
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/disconnect"
        style="?android:attr/borderlessButtonStyle" >
    </Button>

</LinearLayout>
